<resources>
    <string name="app_name">What\'s Up</string>
    <string name="statement">Stay aware of what\'s going on around you.</string>
    <string name="login_button">Login</string>
    <string name="report_comment">Comments</string>
    <string name="comment_hint">Please type your comments here.</string>
    <string name="status_type1">Ongoing</string>
    <string name="status_type2">Upcoming</string>
    <string name="status_type3">Finished</string>
    <string name="status_hint">Choose current status of the event</string>
    <string name="take_photo">Add a photo</string>
    <string name="event_date">SET EVENT DATE</string>
    <string name="event_time">SET EVENT TIME</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="location">Location</string>
    <string name="enter_location">Your location</string>
    <string name="time">Date and Time</string>
    <string name="title_activity_maps">Map</string>

    <string name="log_out">Log Out</string>
    <string name="post_event_button_default">New Event</string>
    <string name="post_event">Add New Event</string>
    <string name="event_info_default">Event Title  event time</string>

    <string name="filter_reports">FILTER</string>
    <string name="undo_filter">UNDO</string>

    <string name="no_nfc">No NFC on Device</string>
    <string name="no_tag_found_retry">Please tap device again</string>
    <string name="event_dialog_title">EventID: %1$s</string>
</resources>
